# cli_v2

./: .gitignore  Cargo.toml  Makefile  ReadMe.md  todo.txt
src/: init.rs  main.rs  properties.rs
src/daemon/: builder.rs  bun.rs  command.rs  configs.rs  init.rs  mod.rs  runner.rs  watcher.rs
src/utils/: bin_finder.rs  capitalize.rs  mod.rs  read_config.rs
src/writers/: component_writer.rs  config_writers.rs  controller_writer.rs  datasource_config_writer.rs  db_config_writer.rs  dto_writer.rs  entity_writer.rs  graphql_server_writer.rs  input_writer.rs  mod.rs  model_writer.rs  resolver_writer.rs  service_writer.rs  setup_writer.rs  socket_component_writer.rs  socket_writer.rs
