[package]
name = "cli_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "3.0",  features = ["derive"] }
tokio = {version = "1.4.2",  features = ["full"]}
dialoguer = "0.11.0"
serde_yaml = "0.9.34"
serde_json = "1.0.135"

[[bin]]
name = "dolph"
path = "src/main.rs"