[package]
name = "cli_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "3.0",  features = ["derive"] }
tokio = {version = "1.4.2",  features = ["full"]}
dialoguer = "0.11.0"
serde_yaml = "0.9.34"
serde_json = "1.0.135"
notify = "8.0.0"
signal-hook = "0.3"
slog = "2.7"
slog-term = "2.9"
slog-async = "2.7"
glob = "0.3"

[[bin]]
name = "dolph"
path = "src/main.rs"